optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_destructure_args_colon_props2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";
export default component$((props) => {
	const { 'bind:value': bindValue } = props;
	const test = useSignal(bindValue);
	return (
		<>
		{test.value}
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "test.tsx_component_G7jVUwdBFEM"));


None
============================= test.tsx_test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const test.tsx_component_G7jVUwdBFEM = (props)=>{
	const { "bind:value": bindValue } = props;
	const test = useSignal(bindValue);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, _wrapProp(test), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    216
  ]
}
*/
== DIAGNOSTICS ==

[]
