optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_destructure_args_colon_props3.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";
export default component$((props) => {
	const { test, ...rest } = props;
	const test = useSignal(rest['bind:value']);
	return (
		<>
		{test.value}
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_3ghsHSPcTK0 = ()=>import("./test.tsx_test_component_3ghsHSPcTK0");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_3ghsHSPcTK0, "test_component_3ghsHSPcTK0"));


None
============================= test.tsx_test_component_3ghsHSPcTK0.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const test_component_3ghsHSPcTK0 = (props)=>{
	const { test, ...rest } = props;
	const test = useSignal(rest["bind:value"]);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, _wrapProp(test), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_3ghsHSPcTK0",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "3ghsHSPcTK0",
  "canonicalFilename": "test.tsx_test_component_3ghsHSPcTK0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    215
  ]
}
*/
== DIAGNOSTICS ==

[]
