optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_destructure_args_inline_cmp_block_stmt.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

export default ({ data }: { data: any }) => {
  return (
    <div
      data-is-active={data.selectedOutputDetail === 'options'}
      onClick$={() => {
        data.selectedOutputDetail = 'options';
      }}
    />
  );
};

============================= test.tsx_test_div_onClick_GbMO6TGQv9M.js (ENTRY POINT)==

export const test_div_onClick_GbMO6TGQv9M = ()=>{
	data.selectedOutputDetail = "options";
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_div_onClick_GbMO6TGQv9M",
  "entry": null,
  "displayName": "test.tsx_test_div_onClick",
  "hash": "GbMO6TGQv9M",
  "canonicalFilename": "test.tsx_test_div_onClick_GbMO6TGQv9M",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_GbMO6TGQv9M = ()=>import("./test.tsx_test_div_onClick_GbMO6TGQv9M");
export default ({ data })=>{
	return /*#__PURE__*/ _jsxSorted("div", {
		data-is-active: data.selectedOutputDetail === "options",
		"on:click": /*#__PURE__*/ qrl(i_GbMO6TGQv9M, "test_div_onClick_GbMO6TGQv9M")
	}, null, null, 3, null);
};


None
== DIAGNOSTICS ==

[]
