optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_1.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component, onRender } from '@qwik.dev/core';

export const renderHeader = $(() => {
	return (
		<div onClick={$((ctx) => console.log(ctx))}/>
	);
});
const renderHeader = component($(() => {
	console.log("mount");
	return render;
}));

============================= test.tsx ==

import { component, qrl } from "@qwik.dev/core";
const i_wNMbGa8f0Dw = ()=>import("./test.tsx_renderHeader_div_onClick_wNMbGa8f0Dw");
const i_AcV95hWr76k = ()=>import("./test.tsx_renderHeader_AcV95hWr76k");
const i_dZG2Ib1X4QU = ()=>import("./test.tsx_renderHeader_component_dZG2Ib1X4QU");
export const renderHeader = /*#__PURE__*/ qrl(i_AcV95hWr76k, "renderHeader_AcV95hWr76k");
const renderHeader = component(/*#__PURE__*/ qrl(i_dZG2Ib1X4QU, "renderHeader_component_dZG2Ib1X4QU"));


None
============================= test.tsx_renderHeader_component_dZG2Ib1X4QU.tsx (ENTRY POINT)==

export const renderHeader_component_dZG2Ib1X4QU = ()=>{
	console.log("mount");
	return render;
};


None
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_component_dZG2Ib1X4QU",
  "entry": null,
  "displayName": "test.tsx_renderHeader_component",
  "hash": "dZG2Ib1X4QU",
  "canonicalFilename": "test.tsx_renderHeader_component_dZG2Ib1X4QU",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    195,
    243
  ]
}
*/
============================= test.tsx_renderHeader_div_onClick_wNMbGa8f0Dw.tsx (ENTRY POINT)==

export const renderHeader_div_onClick_wNMbGa8f0Dw = (ctx)=>console.log(ctx);


None
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_div_onClick_wNMbGa8f0Dw",
  "entry": null,
  "displayName": "test.tsx_renderHeader_div_onClick",
  "hash": "wNMbGa8f0Dw",
  "canonicalFilename": "test.tsx_renderHeader_div_onClick_wNMbGa8f0Dw",
  "path": "",
  "extension": "tsx",
  "parent": "$0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    124,
    149
  ]
}
*/
============================= test.tsx_renderHeader_AcV95hWr76k.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_wNMbGa8f0Dw = ()=>import("./test.tsx_renderHeader_div_onClick_wNMbGa8f0Dw");
export const renderHeader_AcV95hWr76k = ()=>{
	return <div onClick={/*#__PURE__*/ qrl(i_wNMbGa8f0Dw, "renderHeader_div_onClick_wNMbGa8f0Dw")} />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_AcV95hWr76k",
  "entry": null,
  "displayName": "test.tsx_renderHeader",
  "hash": "AcV95hWr76k",
  "canonicalFilename": "test.tsx_renderHeader_AcV95hWr76k",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    88,
    159
  ]
}
*/
== DIAGNOSTICS ==

[]
