optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_10.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
const Header = $((decl1, {decl2}, [decl3]) => {

	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], {ident7}, {key: ident8});
	class Some {
		prop = ident9;
		method() {
			return ident10;
		}
	}

	return (
		<div onClick={(ident11) => ident11 + ident12} required={false}/>
	)
});

============================= project/test.tsx ==

import { qrl } from "@qwik.dev/core";
const i_E8Lhlb0qSdA = ()=>import("./test.tsx_test.tsx_Header_E8Lhlb0qSdA");
/*#__PURE__*/ qrl(i_E8Lhlb0qSdA, "test.tsx_Header_E8Lhlb0qSdA");


None
============================= project/test.tsx_test.tsx_Header_E8Lhlb0qSdA.tsx (ENTRY POINT)==

export const test.tsx_Header_E8Lhlb0qSdA = (decl1, { decl2 }, [decl3])=>{
	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], { ident7 }, { key: ident8 });
	return <div onClick={(ident11)=>ident11 + ident12} required={false} />;
};


None
/*
{
  "origin": "project/test.tsx",
  "name": "test.tsx_Header_E8Lhlb0qSdA",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "E8Lhlb0qSdA",
  "canonicalFilename": "test.tsx_test.tsx_Header_E8Lhlb0qSdA",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    65,
    391
  ]
}
*/
== DIAGNOSTICS ==

[]
