optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
export const Header = component$(() => {
	console.log("mount");
	return (
		<div onClick={$((ctx) => console.log(ctx))}/>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_NeyHGN2dO7k = ()=>import("./test.tsx_test.tsx_Header_component_div_onClick_NeyHGN2dO7k");
const i_Qw9nV3mG0KQ = ()=>import("./test.tsx_test.tsx_Header_component_Qw9nV3mG0KQ");
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Qw9nV3mG0KQ, "test.tsx_Header_component_Qw9nV3mG0KQ"));


None
============================= test.tsx_test.tsx_Header_component_Qw9nV3mG0KQ.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_NeyHGN2dO7k = ()=>import("./test.tsx_test.tsx_Header_component_div_onClick_NeyHGN2dO7k");
export const test.tsx_Header_component_Qw9nV3mG0KQ = ()=>{
	console.log("mount");
	return <div onClick={/*#__PURE__*/ qrl(i_NeyHGN2dO7k, "test.tsx_Header_component_div_onClick_NeyHGN2dO7k")} />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Header_component_Qw9nV3mG0KQ",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "Qw9nV3mG0KQ",
  "canonicalFilename": "test.tsx_test.tsx_Header_component_Qw9nV3mG0KQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    175
  ]
}
*/
============================= test.tsx_test.tsx_Header_component_div_onClick_NeyHGN2dO7k.tsx (ENTRY POINT)==

export const test.tsx_Header_component_div_onClick_NeyHGN2dO7k = (ctx)=>console.log(ctx);


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Header_component_div_onClick_NeyHGN2dO7k",
  "entry": null,
  "displayName": "test.tsx_Header_component_div_onClick",
  "hash": "NeyHGN2dO7k",
  "canonicalFilename": "test.tsx_test.tsx_Header_component_div_onClick_NeyHGN2dO7k",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    140,
    165
  ]
}
*/
== DIAGNOSTICS ==

[]
